--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.542.0",
     "next": "15.4.5",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
