--- a/package.json
+++ b/package.json
@@ -18,19 +18,26 @@
     "@hookform/resolvers": "^5.2.1",
     "@mui/icons-material": "^7.3.1",
     "aos": "^2.3.4",
+    "canvg": "^4.0.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.4.5",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
+    "openai": "^5.20.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-to-print": "^3.1.1",
+    "stackblur-canvas": "^2.7.0",
+    "svg-pathdata": "^8.0.0",
     "yup": "^1.7.0",
     "zod": "^4.0.17"
   },
